Fix tooltip z-index

--- a/src/components/range/range.scss
+++ b/src/components/range/range.scss
@@ -123,6 +123,7 @@
 // Tooltip
 .range__tooltip {
   position: absolute;
+  z-index: var(--sl-z-index-tooltip);
   left: 1px;
   border-radius: var(--sl-tooltip-border-radius);
   background-color: var(--sl-tooltip-background-color);
